<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                        android:id="@+id/logo"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:src="@drawable/ic_no_internet2" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_connection"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/no_connection_msg"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_14sdp" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_try_again"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn_main"
                        android:text="@string/retry"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
        </LinearLayout>
</RelativeLayout>